<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".MainActivity"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        >
        <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">


    <Button
        android:id="@+id/btn_main_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_main_play"
        android:textSize="@dimen/txt_size_700"
        android:padding="@dimen/marg_500"
        android:layout_marginBottom="@dimen/marg_500"
        />

    <Button
        android:id="@+id/btn_main_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_main_stats"
        android:layout_marginTop="@dimen/marg_500"
        android:layout_marginBottom="@dimen/marg_500"
        />

    <Button
        android:id="@+id/btn_main_prefs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_main_prefs"
        android:layout_marginTop="@dimen/marg_500"
        />
    </LinearLayout>
</LinearLayout>
