<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".MainActivity"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_prefs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        >

        <ImageView
            android:id="@+id/img_prefs_back"
            android:src="@drawable/vector_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/str_main_prefs"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marg_btn"
            android:layout_marginRight="@dimen/marg_btn"
            android:layout_marginTop="@dimen/marg_btn"
            android:text="@string/str_prefs_lang"/>

        <Spinner
            android:id="@+id/dropd_prefs_lang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:textColor="@color/black"
            android:backgroundTint="@color/red_200"
            android:layout_marginLeft="@dimen/marg_btn"
            android:layout_marginRight="@dimen/marg_btn"
            android:layout_marginBottom="@dimen/marg_btn"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marg_btn"
            android:layout_marginLeft="@dimen/marg_btn"
            android:layout_marginRight="@dimen/marg_btn"
            android:text="@string/str_prefs_gamenr"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_pref_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marg_btn"
                android:layout_marginRight="@dimen/marg_btn"
                android:textSize="@dimen/txt_size_600"
                android:textColor="@color/black"
                app:strokeColor="@color/red_500"
                app:strokeWidth="3dp"
                app:cornerRadius="5dp"
                android:backgroundTint="@color/red_200"
                android:text="5"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_pref_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marg_btn"
                android:layout_marginRight="@dimen/marg_btn"
                android:textSize="@dimen/txt_size_600"
                android:textColor="@color/black"
                app:strokeColor="@color/red_500"
                app:strokeWidth="3dp"
                app:cornerRadius="5dp"
                android:backgroundTint="@color/red_200"
                android:text="10"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_pref_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marg_btn"
                android:layout_marginRight="@dimen/marg_btn"
                android:textSize="@dimen/txt_size_600"
                android:textColor="@color/black"
                app:strokeColor="@color/red_500"
                app:strokeWidth="3dp"
                app:cornerRadius="5dp"
                android:backgroundTint="@color/red_200"
                android:text="15"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
