<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".MainActivity"
    tools:ignore="HardcodedText"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        >
        <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/marg_700"
            android:paddingRight="@dimen/marg_700"
            android:layout_marginEnd="@dimen/marg_300"
            android:background="@color/red_100"
            android:orientation="vertical"
            android:gravity="center"
            >
            <TextView
                android:paddingTop="@dimen/marg_300"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_play_right"
                />
            <TextView
                android:id="@+id/txt_play_rights"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/marg_300"
                android:textSize="@dimen/txt_size_550"
                android:drawableEnd="@drawable/yes"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/marg_700"
            android:paddingRight="@dimen/marg_700"
            android:layout_marginEnd="@dimen/marg_300"
            android:background="@color/red_100"
            android:orientation="vertical"
            android:gravity="center"
            >
            <TextView
                android:paddingTop="@dimen/marg_300"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_play_wrong"
                />
            <TextView
                android:id="@+id/txt_play_wrongs"
                android:paddingBottom="@dimen/marg_300"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txt_size_550"
                android:drawableEnd="@drawable/no"
                />

        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/txt_play_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marg_500"
        android:textAlignment="center"
        android:textSize="@dimen/txt_size_850"
        />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_marginBottom="@dimen/marg_500"
    >
    <TextView
        android:id="@+id/txt_play_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:text="@string/str_play_answer"
        android:alpha=".5"
        android:layout_marginBottom="@dimen/marg_500"
        android:textSize="@dimen/txt_size_800"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_play_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marg_500"
            android:layout_marginRight="@dimen/marg_500"
            android:paddingBottom="@dimen/marg_300"
            android:paddingTop="@dimen/marg_300"
            android:textSize="@dimen/txt_size_600"
            android:textColor="@color/black"
            app:strokeColor="@color/red_500"
            app:strokeWidth="3dp"
            app:cornerRadius="5dp"
            android:backgroundTint="@color/red_200"
            android:text="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_play_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marg_500"
            android:layout_marginRight="@dimen/marg_500"
            android:paddingBottom="@dimen/marg_300"
            android:paddingTop="@dimen/marg_300"
            android:textSize="@dimen/txt_size_600"
            android:textColor="@color/black"
            app:strokeColor="@color/red_500"
            app:strokeWidth="3dp"
            app:cornerRadius="5dp"
            android:backgroundTint="@color/red_200"
            android:text="2"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_play_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marg_500"
            android:layout_marginRight="@dimen/marg_500"
            android:paddingBottom="@dimen/marg_300"
            android:paddingTop="@dimen/marg_300"
            android:textSize="@dimen/txt_size_600"
            android:textColor="@color/black"
            app:strokeColor="@color/red_500"
            app:strokeWidth="3dp"
            app:cornerRadius="5dp"
            android:backgroundTint="@color/red_200"
            android:text="3"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_play_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marg_500"
            android:layout_marginRight="@dimen/marg_500"
            android:paddingBottom="@dimen/marg_300"
            android:paddingTop="@dimen/marg_300"
            android:textSize="@dimen/txt_size_600"
            android:textColor="@color/black"
            app:strokeColor="@color/red_500"
            app:strokeWidth="3dp"
            app:cornerRadius="5dp"
            android:backgroundTint="@color/red_200"
            android:text="4"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_play_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marg_500"
            android:layout_marginRight="@dimen/marg_500"
            android:paddingBottom="@dimen/marg_300"
            android:paddingTop="@dimen/marg_300"
            android:textSize="@dimen/txt_size_600"
            android:textColor="@color/black"
            app:strokeColor="@color/red_500"
            app:strokeWidth="3dp"
            app:cornerRadius="5dp"
            android:backgroundTint="@color/red_200"
            android:text="5"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_play_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marg_500"
            android:layout_marginRight="@dimen/marg_500"
            android:paddingBottom="@dimen/marg_300"
            android:paddingTop="@dimen/marg_300"
            android:textSize="@dimen/txt_size_600"
            android:textColor="@color/black"
            app:strokeColor="@color/red_500"
            app:strokeWidth="3dp"
            app:cornerRadius="5dp"
            android:backgroundTint="@color/red_200"
            android:text="6"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_play_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marg_500"
            android:layout_marginRight="@dimen/marg_500"
            android:paddingBottom="@dimen/marg_300"
            android:paddingTop="@dimen/marg_300"
            android:textSize="@dimen/txt_size_600"
            android:textColor="@color/black"
            app:strokeColor="@color/red_500"
            app:strokeWidth="3dp"
            app:cornerRadius="5dp"
            android:backgroundTint="@color/red_200"
            android:text="7"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_play_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marg_500"
            android:layout_marginRight="@dimen/marg_500"
            android:paddingBottom="@dimen/marg_300"
            android:paddingTop="@dimen/marg_300"
            android:textSize="@dimen/txt_size_600"
            android:textColor="@color/black"
            app:strokeColor="@color/red_500"
            app:strokeWidth="3dp"
            app:cornerRadius="5dp"
            android:backgroundTint="@color/red_200"
            android:text="8"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_play_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marg_500"
            android:layout_marginRight="@dimen/marg_500"
            android:paddingBottom="@dimen/marg_300"
            android:paddingTop="@dimen/marg_300"
            android:textSize="@dimen/txt_size_600"
            android:textColor="@color/black"
            app:strokeColor="@color/red_500"
            app:strokeWidth="3dp"
            app:cornerRadius="5dp"
            android:backgroundTint="@color/red_200"
            android:text="9"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_play_erase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marg_500"
            android:layout_marginRight="@dimen/marg_500"
            android:paddingBottom="@dimen/marg_300"
            android:paddingTop="@dimen/marg_300"
            android:textSize="@dimen/txt_size_600"
            android:textColor="@color/black"
            app:strokeColor="@color/red_500"
            app:strokeWidth="3dp"
            app:cornerRadius="5dp"
            android:backgroundTint="@color/red_200"
            app:icon="@drawable/backspace"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="@color/black"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_play_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marg_500"
            android:layout_marginRight="@dimen/marg_500"
            android:paddingBottom="@dimen/marg_300"
            android:paddingTop="@dimen/marg_300"
            android:textSize="@dimen/txt_size_600"
            android:textColor="@color/black"
            app:strokeColor="@color/red_500"
            app:strokeWidth="3dp"
            app:cornerRadius="5dp"
            android:backgroundTint="@color/red_200"
            android:text="0"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_play_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marg_500"
            android:layout_marginRight="@dimen/marg_500"
            android:paddingBottom="@dimen/marg_300"
            android:paddingTop="@dimen/marg_300"
            android:textSize="@dimen/txt_size_600"
            android:textColor="@color/white"
            app:strokeColor="@color/red_500"
            app:strokeWidth="3dp"
            app:cornerRadius="5dp"
            android:backgroundTint="@color/red_500"
            app:icon="@drawable/check"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            />

    </LinearLayout>
</LinearLayout>

</LinearLayout>
